@@ -1284,3 +1284,6 @@ warning if this limit is exceeded.
 Added tone-mapping and monitor primary options to ra_bmp.  This gives
 new functionality similar to normtiff and ximage.  It would be nice to
 add this feature to the other ra_* programs as well...  someday.
+
+Fixed long-standing bug in reported pixel ordering out of certain
+protate commands.
